# llmfit

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
data/: hf_models.json
llmfit-core/: Cargo.toml
llmfit-core/src/: fit.rs  hardware.rs  models.rs  providers.rs
llmfit-desktop/src/: main.rs
llmfit-tui/: Cargo.toml
llmfit-tui/src/: display.rs  main.rs  serve_api.rs  tui_app.rs  tui_events.rs  tui_ui.rs
scripts/: scrape_hf_models.py
src/: display.rs  fit.rs  hardware.rs  main.rs  models.rs  providers.rs  tui_app.rs  tui_events.rs  tui_ui.rs
