[package]
name = "llmfit"
version.workspace = true
edition = "2024"
authors = ["Alex Jones <alex@example.com>"]
description = "Right-size LLM models to your system hardware. Interactive TUI and CLI to match models against available RAM, CPU, and GPU."
license = "MIT"
repository = "https://github.com/AlexsJones/llmfit"
homepage = "https://github.com/AlexsJones/llmfit"
readme = "../README.md"
keywords = ["llm", "tui", "hardware", "inference", "models"]
categories = ["command-line-utilities"]

[[bin]]
name = "llmfit"
path = "src/main.rs"

[dependencies]
llmfit-core = { version = "0.4.0", path = "../llmfit-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.28"
